--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,10 @@
 name: virtual-copernicus-env
 channels:
   - conda-forge
+  - anaconda
 dependencies:
   - python
+  - netcdf4=1.4.2
   - matplotlib
   - basemap
   - scipy
