--- a/binder/environment2.yml
+++ b/binder/environment2.yml
@@ -2,6 +2,8 @@ name: ipykernel_py2
 channels:
   - conda-forge
   - defaults
+  - flynn
+  - bioconda
 dependencies:
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.5=py_1
@@ -15,6 +17,10 @@ dependencies:
   - enum34=1.1.6=py27_1001
   - expat=2.2.5=hf484d3e_1002
   - fontconfig=2.13.1=he4413a7_1000
+  - ftputil
+  - thriftpy
+  - requests 
+  - ncftp
   - freetype=2.10.0=he983fc9_0
   - functools32=3.2.3.2=py_3
   - futures=3.2.0=py27_1000
