--- a/binder/environment2.yml
+++ b/binder/environment2.yml
@@ -88,6 +88,7 @@ dependencies:
   - traitlets=4.3.2=py27_1000
   - wcwidth=0.1.7=py_1
   - wheel=0.33.1=py27_0
+  - xarray
   - xorg-libxau=1.0.9=h14c3975_0
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xz=5.2.4=h14c3975_1001
