--- a/binder/environment2.yml
+++ b/binder/environment2.yml
@@ -55,7 +55,7 @@ dependencies:
   - openblas=0.3.6=h6e990d7_1
   - openssl=1.1.1b=h14c3975_1
   - pathlib2=2.3.3=py27_1000
-  - pandas
+  - scipy=1.2.1=py37h7c811a0_0
   - pcre=8.41=hf484d3e_1003
   - pexpect=4.7.0=py27_0
   - pickleshare=0.7.5=py27_1000
